--- a/BookApi/BookApi/appsettings.json
+++ b/BookApi/BookApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-PKMBKFFG\\sqlexpress;Initial Catalog=LanchesDatabase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
