--- a/BookApi/BookApi/appsettings.json
+++ b/BookApi/BookApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-PKMBKFFG\\sqlexpress;Initial Catalog=LanchesDatabase"
+    "DefaultConnection": "Data Source=[HOSTNAME]\\[INSTANCESQLNAME];Initial Catalog=LanchesDatabase"
   },
   "Logging": {
     "LogLevel": {
